@@ -56,7 +56,6 @@ import java.util.List;
 import javax.print.attribute.*;
 import javax.print.PrintService;
 
-import sun.misc.ManagedLocalsThread;
 import sun.reflect.misc.ReflectUtil;
 
 import sun.swing.SwingUtilities2;
@@ -82,7 +81,7 @@ import sun.swing.PrintingStatus;
  *      TableModel dataModel = new AbstractTableModel() {
  *          public int getColumnCount() { return 10; }
  *          public int getRowCount() { return 10;}
- *          public Object getValueAt(int row, int col) { return new Integer(row*col); }
+ *          public Object getValueAt(int row, int col) { return Integer.valueOf(row*col); }
  *      };
  *      JTable table = new JTable(dataModel);
  *      JScrollPane scrollpane = new JScrollPane(table);
@@ -6375,7 +6374,7 @@ public class JTable extends JComponent implements TableModelListener, Scrollable
         };
 
         // start printing on another thread
-        Thread th = new ManagedLocalsThread(runnable);
+        Thread th = new Thread(null, runnable, "JTablePrint", 0, false);
         th.start();
 
         printingStatus.showModal(true);
